[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "audiokit"
version = "0.1.0"
description = "Purpose-neutral audio plumbing: I/O, resampling, energy-VAD, SNR, and model download — shared by coughkit, sherox, and nkululeko."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bagus Tris Atmaja", email = "btatmaja@gmail.com" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.10",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
mic = ["sounddevice>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["error::DeprecationWarning"]
