[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "audiokit"
version = "0.2.0"
description = "Purpose-neutral audio plumbing: I/O, resampling, energy-VAD, SNR, model download, integrity verification, feature contracts, segment CSV export, and scaler serialisation — shared by coughkit, sherox, and nkululeko."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bagus Tris Atmaja", email = "btatmaja@gmail.com" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.10",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
mic = ["sounddevice>=0.4"]
toml = ["tomli>=2.0; python_version < '3.11'"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["error::DeprecationWarning"]
